# Rpc_Assignment

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  main.cpp
include/: ClientAbstractFactoryInterface.h  ClientBadDreamHTTP.h  ClientConcreteDreamRpcBadDreamHTTPFactory.h  ClientDreamRpc.h  ClientRpcInterface.h  ClientTransportInterface.h  ServerAbstractFactoryInterface.h  ServerBadDreamHTTP.h  ServerConcreteDreamRpcBadDreamHTTPFactory.h  ServerDreamRpc.h  ServerRpcInterface.h  ServerTransportInterface.h
include/Rpc/: ClientDreamRpc.h  ClientRpcInterface.h
include/Rpc/ClientRpc/: ClientDreamRpc.h  ClientRpc.h
include/Transport/: ClientBadDreamHTTP.h  ClientTransport.h  ClientTransportInterface.h
include/Transport/ClientTransport/: ClientBadDreamHTTP.h  ClientTransport.h
src/ObjectFactory/: ClientConcreteDreamRpcBadDreamHTTPFactory.cpp  ServerConcreteDreamRpcBadDreamHTTPFactory.cpp
src/Rpc/: ClientDreamRpc.cpp  ClientRpcInterface.cpp  ServerDreamRpc.cpp  ServerRpcInterface.cpp
src/Rpc/ClientRpc/: ClientDreamRpc.cpp  ClientRpc.cpp
src/Rpc/ClientRpc/include/: ClientDreamRpc.h  ClientRpc.h
src/Strategy/: RpcStrategy.cpp
src/Transport/: ClientBadDreamHTTP.cpp
